Refactoring, store flags of createMethod() calls